a11y fix - link contrast

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,6 +18,7 @@ $brand-color:      #2a7ae2;
 
 $ftpink:           #fff1e5;
 $claret:           #9e2f50;
+$oxford:           #0F5499;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -48,7 +49,7 @@ $on-laptop:        1100px;
 }
 
 p a[href]{
-  color: #2a7ae2;
+  color: $claret;
 }
 
 body{
